# ppif-binder-generation

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
boltzgen_inputs/: cyclic_peptide_to_ppif.yaml
data/: 7r2h_processed.cif  cyclic_peptide_to_ppif.yaml
modal/: 7r2h.cif  7r2h_processed.cif  cyclic_peptide_to_ppif.yaml  run_boltzgen_modal.py
notebooks/: view_final_designs.ipynb
scripts/: fetch_structure.py  process_structure.py  run_boltzgen_modal.py
